...
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:text="@string/leaders"
                            android:textColor="@color/gray_dark" />

                        <ImageButton
                            android:id="@+id/ibAddLeader"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_add_black_24dp" />

                    </LinearLayout>
...
